# TqkLibrary.StreamRelay

./: .gitattributes  .gitignore  README.md  TqkLibrary.StreamRelay.slnx
docs/: plan-vi.md  progress-vi.md
src/TqkLibrary.StreamRelay.AspNetCore/: NotConfiguredStreamDemuxerFactory.cs  RelayConnectionHandler.cs  StreamRelayOptions.cs  TqkLibrary.StreamRelay.AspNetCore.csproj  WebSocketPacketSink.cs  WireProtocol.cs  WireProtocolReader.cs
src/TqkLibrary.StreamRelay.AspNetCore/Enums/: DemuxMode.cs  WireMessageType.cs
src/TqkLibrary.StreamRelay.AspNetCore/Extensions/: StreamRelayEndpointRouteBuilderExtensions.cs  StreamRelayServiceCollectionExtensions.cs
src/TqkLibrary.StreamRelay.AspNetCore/Models/: WirePacket.cs
src/TqkLibrary.StreamRelay.Core/: DemuxCapacityExceededException.cs  GopBuffer.cs  StreamRegistry.cs  StreamSession.Subscriber.cs  StreamSession.cs  TqkLibrary.StreamRelay.Core.csproj
src/TqkLibrary.StreamRelay.Core/Buffers/: RefCountedBuffer.cs
src/TqkLibrary.StreamRelay.Core/Enums/: MediaCodecKind.cs  SubscriberMessageKind.cs
src/TqkLibrary.StreamRelay.Core/Interfaces/: IPacketSink.cs  IStreamDemuxer.cs  IStreamDemuxerFactory.cs
src/TqkLibrary.StreamRelay.Core/Models/: GopSnapshot.cs  MediaInit.cs  MediaStreamInfo.cs  RelayPacket.cs  RelaySessionOptions.cs  SubscriberMessage.cs
src/TqkLibrary.StreamRelay.Demo/: DevicePusher.cs  NativeViewerClient.cs  Program.cs  RelayHostFactory.cs  TqkLibrary.StreamRelay.Demo.csproj
src/TqkLibrary.StreamRelay.Demo/wwwroot/: index.html
src/TqkLibrary.StreamRelay.Demo/wwwroot/js/: mse-viewer.js
src/TqkLibrary.StreamRelay.Demux.FFmpeg/: DemuxWorkerSupervisor.cs  FFmpegStreamDemuxerFactory.cs  FragmentedMp4PacketSink.cs  FragmentedMp4Remuxer.cs  InProcessFFmpegDemuxer.cs  NativeWrapper.cs  OutOfProcessFFmpegDemuxer.cs  TqkLibrary.StreamRelay.Demux.FFmpeg.csproj
src/TqkLibrary.StreamRelay.Demux.FFmpeg.Native/: Build.ps1  ByteFifo.h  CMakeLists.txt  DemuxInterop.h  Demuxer.cpp  Demuxer.h  Exports.cpp  Exports.h  FragmentSink.h  MuxInterop.h  Muxer.cpp  Muxer.h  Worker.cpp  dllmain.cpp  libav.h  platform.h  version.generated.h.in  version.rc
src/TqkLibrary.StreamRelay.Demux.FFmpeg/Extensions/: FFmpegDemuxServiceCollectionExtensions.cs  FragmentedMp4EndpointRouteBuilderExtensions.cs
src/TqkLibrary.StreamRelay.Demux.FFmpeg/Helpers/: NativeInitMarshaler.cs  WorkerInitSerializer.cs
src/TqkLibrary.StreamRelay.Demux.FFmpeg/Interop/: MediaInitOut.cs  MuxPacketIn.cs  MuxStreamIn.cs  PacketOut.cs  StreamInfoOut.cs
src/TqkLibrary.StreamRelay.Demux.FFmpeg/Process/: WindowsJobObject.cs  WorkerHandle.cs
test/TqkLibrary.StreamRelay.Test/: DemuxWorkerSupervisorTests.cs  FragmentedMp4RemuxerTests.cs  GopBufferTests.cs  InProcessFFmpegDemuxerTests.cs  StreamRegistryTests.cs  StreamSessionTests.cs  TqkLibrary.StreamRelay.Test.csproj  WireProtocolTests.cs
test/TqkLibrary.StreamRelay.Test/Assets/: sample.ts
test/TqkLibrary.StreamRelay.Test/Fakes/: FakePacketSink.cs  FakeStreamDemuxer.cs  RefCountAssert.cs  TestPacketFactory.cs
